--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@
 }
 .page-header {
   background-image: url("../img/header-background-mobile320x449.jpg");
+  background-position: 0px 37px;
 }
 .page-header__wrapper {
-    background-color: #b2b2b2;
-    opacity: 0.3;
+    background-color: #1d2631;
     height: 66px;
+    opacity: 0.7;
 }
 .page-header .page-header__logo-wrap {
   display: inline-block;
@@ -44,8 +45,13 @@
     color: white;
     font-size: 24px;
     font-weight: 100;
-    padding: 0 60px;
+    padding: 6px 35px;
     margin-bottom: 10px;
+}
+.header-promo__img {
+    width: 257px;
+    display: block;
+    padding-top: 10px;
 }
 .download__wrapper {
     background-color: #1d2631;
@@ -58,12 +64,14 @@
     border-radius: 30px;
     text-decoration: none;
     color: white;
-    padding: 15px;
-    margin: 0px 20px;
+    padding: 12px 36px;
+    margin: 0px 18px;
     font-size: 18px;
+    text-align: left;
 }
 .download__logos {
-    margin: 32px 57px;
+    margin-top: 31px;
+    margin-bottom: 20px;
 }
 .download__logos img {
     margin-right: 33px;
@@ -72,38 +80,62 @@
     margin-right: 0;
 }
 .download__text {
-    margin: 0 45px;
+    margin: 0 30px;
     font-size: 14px;
     padding-bottom: 37px;
 }
-.reasons__header {
+.reasons__header-1,
+.reasons__header-2 {
     text-align: center;
     font-size: 24px;
     font-weight: 100;
-    margin: 50px 60px 0 60px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+.reasons__header-1 {
+    margin-top: 43px;
+    margin-bottom: 30px;
 }
 .reasons__wrap {
     background-image: url(../img/grey-background-320x828.jpg);
-    padding-top: 40px;
+    background-position: bottom;
+    padding-top: 0px;
 }
 .reasons__item:first-child {
-    padding-top: 30px;
+    padding-top: 72px;
+}
+.reasons__item h2 {
+    font-size: 22px;
+    font-weight: normal;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.reasons__item p {
+    line-height: 21px;
+    padding-bottom: 15px;
 }
 .reasons__item {
-    padding-top: 5px;
+    padding-top: 0px;
     padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 10px;
 }
 .reasons__img {
     margin: auto;
     width: 160px;
+    height: 245px;
     background-image: url(../img/iphone-case-1@1x.png);
+    background-position: 0 9px;
     background-size: 100%;
     background-repeat: no-repeat;
-    padding-top: 30px;
+    padding-top: 43px;
+    overflow: hidden;
 }
 .slider-reviews {
-    padding: 50px 20px;
+    padding: 30px 20px;
+}
+.slider-reviews__text {
+    line-height: 29px;
 }
 .slider-reviews__item:nth-child(2),
 .slider-reviews__item:nth-child(3){
@@ -111,15 +143,15 @@
 }
 .slider-btn {
     display: inline-block;
-    width: 6px;
-    height: 6px;
+    width: 5px;
+    height: 5px;
     border: solid grey 1px;
     border-radius: 10px;
     background-color: grey;
-    margin-right: 19px;
-    margin-top: 40px;
+    margin-right: 14px;
+    margin-top: 33px;
     vertical-align: middle;
-    margin-bottom: 40px;
+    margin-bottom: 12px;
 }
 .slider-btn:last-child {
     margin-right: 0;
@@ -130,14 +162,17 @@
 }
 .price {
     background-image: url(../img/grey-background2-320x505.jpg);
+    background-position: bottom;
     padding-top: 90px;
     overflow: hidden;
+    padding-bottom: 35px;
 }
 .price__table {
     width: 1200px;
     padding-bottom: 0px;
     text-transform: uppercase;
-    margin-left: -296px;
+    margin-left: -255px;
+    margin-bottom: 5px;
 }
 .price__table tr {
     border: solid #e5e5e5 2px;
@@ -151,7 +186,7 @@
 .price__table-col-2,
 .price__table-col-3{
     display: inline-block;
-    width: 280px;
+    width: 252px;
 }
 .price__table-row-1 td{
     background-color: #283645;
@@ -165,23 +200,22 @@
 .price__table-row-3 td,
 .price__table-row-4 td {
     background-color: #ffffff;
-    padding: 30px 0 30px 22px;
+    padding: 20px 0 20px 22px;
     
 }
 .price__table-col-2 {
     position: relative;
 }
 .price__flag {
-    width: 90px;
-    height: 20px;
+    width: 105px;
+    height: 24px;
     position: absolute;
-    top: 13px;
-    left: -21px;
+    top: 10px;
+    left: -30px;
     z-index: 2;
     background-color: #d22856;
     transform: rotate(-45deg);
-    overflow: hidden;
-    padding-top: 3px;
+    padding-top: 5px;
 }
 .price__table tr {
     text-align: left;
@@ -190,35 +224,47 @@
 .price__table-row-2 .price__table-col-1,
 .price__table-row-2 .price__table-col-2,
 .price__table-row-2 .price__table-col-3,
-.price__table-row-3 .price__table-col-3{
+.price__table-row-3 .price__table-col-2{
     background-image: url(../img/yes.svg);
     background-repeat: no-repeat;
-    background-position: 230px 25px;
+    background-position: 228px 18px;
 }
 .price__table-row-3 .price__table-col-1,
-.price__table-row-3 .price__table-col-2,
+.price__table-row-3 .price__table-col-3,
 .price__table-row-4 .price__table-col-1,
 .price__table-row-4 .price__table-col-2,
 .price__table-row-4 .price__table-col-3 {
     background-image: url(../img/no.svg);
     background-repeat: no-repeat;
-    background-position: 230px 25px;
+    background-position: 230px 14px;
 }
 .page-footer__contacts {
     font-size: 24px;
 }
 .page-footer__contact-header {
-    padding: 50px;
+    padding-top: 30px;
+    padding-bottom: 16px;
     font-weight: 100;
     font-size: 24px;
     color: #283645;
 }
 .page-footer__contact-text {
     font-size: 18px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .page-footer__contact-text a {
-    font-size: 24px;
+    font-size: 26px;
     color: #d8456d;
     text-decoration: none;
 }
-
+.page-footer__map {
+    position: relative;
+}
+.page-footer__white-arrow {
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
