--- a/css/style.css
+++ b/css/style.css
@@ -7,26 +7,29 @@
 .page-header {
   background-image: url("../img/header-background-mobile320x449.jpg");
   background-position: 0px 37px;
+    background-repeat: no-repeat;
 }
 .page-header__wrapper {
-    background-color: #1d2631;
+    background-color: #1c2630;
     height: 66px;
-    opacity: 0.7;
+    opacity: 1;
 }
 .page-header .page-header__logo-wrap {
   display: inline-block;
     float: left;
   min-height: 65px;
-  width: 120px;
+  width: 110px;
 }
 .page-header .page-header__logo {
-  margin: 20px;
+  margin-top: 22px;
+  margin-left: 5px;
   width: 74px;
 }
 .page-header__nav-wrap {
   float: right;
   width: 50px;
-  margin: 20px;
+  margin-top: 21px;
+    margin-right: 20px;
 }
 .page-header__nav-wrap .main-nav__list {
   display: none;
@@ -67,7 +70,14 @@
     padding: 12px 36px;
     margin: 0px 18px;
     font-size: 18px;
-    text-align: left;
+    text-align: center;
+}
+.download__btn:hover {
+    background-color: #ffffff;
+    color: #d22856;
+}
+.download__btn:active {
+    color: #f1becc;
 }
 .download__logos {
     margin-top: 31px;
@@ -258,6 +268,9 @@
     font-size: 26px;
     color: #d8456d;
     text-decoration: none;
+}
+.page-footer__contact-text a:active {
+    color: #bec2c7;
 }
 .page-footer__map {
     position: relative;
